<resources>
    <string name="app_name">Auto Dealer</string>
    <string name="brand">Brand </string>
    <string name="model">Model </string>
    <string name="year">Year </string>
    <string name="kilometer">Kilometer </string>
    <string name="color">Color </string>
    <string name="fuel">Fuel </string>
    <string name="gearbox">Gearbox </string>
    <string name="price">Price </string>
    <string name="added_time">Added Time </string>
    <string name="updated_time">Updated Time </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search_car">Search Car</string>
    <string name="sort_car">Sort Car</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="logout">Logout</string>

</resources>