<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/colorPrimary"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/brandTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tiny_margin"
            android:text="@string/brand"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/modelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tiny_margin"
            android:text="@string/model"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/yearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tiny_margin"
            android:text="@string/year"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/kilometerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tiny_margin"
            android:text="@string/kilometer"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/colorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tiny_margin"
            android:text="@string/color"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tiny_margin"
            android:text="@string/price"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/medium_text_size" />


    </LinearLayout>





</androidx.cardview.widget.CardView>