<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".ui.AddEditCar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/brandEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/brand"
            android:inputType="text"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/modelEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/model"
            android:inputType="text"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/colorEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/color"
            android:inputType="text"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/yearEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/year"
            android:inputType="number"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/kilometerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/kilometer"
            android:inputType="number"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/price"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textColor="@color/colorTextPrimary"
            android:textStyle="bold" />

    </LinearLayout>


    <!-- Fab Button araba ekelemek için -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/small_margin"
        android:backgroundTint="@color/colorAccent"
        android:elevation="@dimen/card_elevation"
        android:src="@drawable/baseline_add_24_white"
        app:pressedTranslationZ="10dp"
        app:tint="@color/white" />

</RelativeLayout>