<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".ui.CarDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:stretchColumns="2">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/brandTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Mercedes"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/modelTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" C180"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/yearTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 2019"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometer"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/kilometerTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 10000"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/colorTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Black"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/priceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 100000"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Added Time:"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/addedTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 2021-01-01"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size" />

            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Updated Time:"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/updatedTimeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 2021-01-01"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/big_text_size" />

            </TableRow>


        </TableLayout>

        <TextView
            android:id="@+id/noteTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/big_text_size"
            tools:text="@string/you_can_note_here" />
    </LinearLayout>

</RelativeLayout>